# everybody-codes-2025

./: .gitignore  Cargo.toml  README.md  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs
quest01/: Cargo.toml
quest01/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest02/: Cargo.toml
quest02/src/: lib.rs  main.rs  part1.txt  part3.txt
quest03/: Cargo.toml
quest03/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest04/: Cargo.toml
quest04/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest05/: Cargo.toml
quest05/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest06/: Cargo.toml
quest06/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest07/: Cargo.toml  linear_algebra.py
quest07/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest08/: Cargo.toml
quest08/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest09/: Cargo.toml
quest09/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest10/: Cargo.toml
quest10/src/: lib.rs  main.rs  part1.rs  part1.txt  part2.rs  part2.txt  part3.rs  part3.txt
quest11/: .gitignore  Cargo.toml  proto.py
quest11/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest12/: Cargo.toml
quest12/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest13/: Cargo.toml
quest13/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest14/: Cargo.toml
quest14/src/: floor.rs  lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest15/: .gitignore  Cargo.toml  IDEAS.md
quest15/src/: lib.rs  main.rs  math.rs  part1.txt  part2.txt  part3.txt
quest16/: Cargo.toml
quest16/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest17/: Cargo.toml
quest17/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest18/: Cargo.toml
quest18/scripts/: solver.py
quest18/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest19/: Cargo.toml
quest19/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
quest20/: Cargo.toml
quest20/src/: lib.rs  main.rs  part1.txt  part2.txt  part3.txt
