[workspace]
resolver = "3"
members = [
    "benchmark",
    "quest01",
    "quest02",
    "quest03",
    "quest04",
    "quest05",
    "quest06",
    "quest07",
    "quest08",
    "quest09",
    "quest10",
]

[workspace.metadata.quest01]
start_time = 2025-11-04T00:36:37.137553
completion_time = 2025-11-04T00:46:36.595971

[workspace.metadata.quest02]
start_time = 2025-11-05T21:11:17.103163
completion_time = 2025-11-05T21:30:00.279504

[workspace.metadata.quest03]
start_time = 2025-11-06T00:01:02.601986
completion_time = 2025-11-06T00:13:17.907926

[workspace.metadata.quest04]
start_time = 2025-11-07T00:00:25.224476
completion_time = 2025-11-07T00:11:48.145097

[workspace.metadata.quest05]
start_time = 2025-11-09T16:39:47.193717
completion_time = 2025-11-09T17:01:12.539670

[workspace.metadata.quest06]
start_time = 2025-11-11T00:03:32.261173
completion_time = 2025-11-11T00:25:56.921730

[workspace.metadata.quest07]
start_time = 2025-11-12T01:18:18.718974
completion_time = 2025-11-12T01:49:58.905141

[workspace.metadata.quest08]
start_time = 2025-11-13T00:33:07.906254
completion_time = 2025-11-13T01:07:40.250959

[workspace.metadata.quest09]
start_time = 2025-11-14T02:39:00.487005
completion_time = 2025-11-14T03:22:57.756006

[workspace.metadata.quest10]
start_time = 2025-11-15T01:03:00.291710
completion_time = 2025-11-15T02:03:11.134864
[profile.release]
debug = true
