[workspace]
resolver = "3"
members = [
    "benchmark",
    "quest01",
    "quest02",
    "quest03",
    "quest04",
    "quest05",
    "quest06",
    "quest07",
    "quest08",
    "quest09",
    "quest10",
    "quest11",
    "quest12",
    "quest13",
    "quest14",
    "quest15",
    "quest16",
    "quest17",
    "quest18",
    "quest19",
]

[workspace.metadata.quest01]
start_time = 2025-11-04T00:36:37.137553
completion_time = 2025-11-04T00:46:36.595971

[workspace.metadata.quest02]
start_time = 2025-11-05T21:11:17.103163
completion_time = 2025-11-05T21:30:00.279504

[workspace.metadata.quest03]
start_time = 2025-11-06T00:01:02.601986
completion_time = 2025-11-06T00:13:17.907926

[workspace.metadata.quest04]
start_time = 2025-11-07T00:00:25.224476
completion_time = 2025-11-07T00:11:48.145097

[workspace.metadata.quest05]
start_time = 2025-11-09T16:39:47.193717
completion_time = 2025-11-09T17:01:12.539670

[workspace.metadata.quest06]
start_time = 2025-11-11T00:03:32.261173
completion_time = 2025-11-11T00:25:56.921730

[workspace.metadata.quest07]
start_time = 2025-11-12T01:18:18.718974
completion_time = 2025-11-12T01:49:58.905141

[workspace.metadata.quest08]
start_time = 2025-11-13T00:33:07.906254
completion_time = 2025-11-13T01:07:40.250959

[workspace.metadata.quest09]
start_time = 2025-11-14T02:39:00.487005
completion_time = 2025-11-14T03:22:57.756006

[workspace.metadata.quest10]
start_time = 2025-11-15T01:03:00.291710
completion_time = 2025-11-15T02:03:11.134864

[workspace.metadata.quest11]
start_time = 2025-11-18T15:33:41.655652
completion_time = 2025-11-19T00:36:33.673392

[workspace.metadata.quest12]
start_time = 2025-11-19T00:38:21.911712
completion_time = 2025-11-19T01:03:34.232876

[workspace.metadata.quest13]
start_time = 2025-11-19T23:56:03.079385
completion_time = 2025-11-20T00:23:02.408486

[workspace.metadata.quest14]
start_time = 2025-11-20T23:59:19.216568
completion_time = 2025-11-21T00:28:42.125776

[workspace.metadata.quest15]
start_time = 2025-11-21T23:58:34.985139

[workspace.metadata.quest16]
start_time = 2025-11-25T00:49:19.331681

[workspace.metadata.quest17]
start_time = 2025-11-26T01:51:37.336094
completion_time = 2025-11-26T03:17:22.456025

[workspace.metadata.quest18]
start_time = 2025-11-27T02:01:57.241960
completion_time = 2025-11-27T03:18:13.526982

[workspace.metadata.quest19]
start_time = 2025-11-28T00:47:32.576683
completion_time = 2025-11-28T01:32:33.392702
[profile.release]
debug = true
