[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
quest01 = { version = "0.1.0", path = "../quest01" }
quest02 = { version = "0.1.0", path = "../quest02" }
quest03 = { version = "0.1.0", path = "../quest03" }
quest04 = { version = "0.1.0", path = "../quest04" }
quest05 = { version = "0.1.0", path = "../quest05" }
quest06 = { version = "0.1.0", path = "../quest06" }
quest07 = { version = "0.1.0", path = "../quest07" }
quest08 = { version = "0.1.0", path = "../quest08" }
quest09 = { version = "0.1.0", path = "../quest09" }
quest10 = { version = "0.1.0", path = "../quest10" }
quest11 = { version = "0.1.0", path = "../quest11" }
quest12 = { version = "0.1.0", path = "../quest12" }
quest13 = { version = "0.1.0", path = "../quest13" }
quest14 = { version = "0.1.0", path = "../quest14" }
quest15 = { version = "0.1.0", path = "../quest15" }
quest16 = { version = "0.1.0", path = "../quest16" }
quest17 = { version = "0.1.0", path = "../quest17" }
quest18 = { version = "0.1.0", path = "../quest18" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false

[lib]
bench = false
